--- a/exploratory.qmd
+++ b/exploratory.qmd
@@ -6,6 +6,7 @@ format: html
 ```{r}
 library(tidyverse)
 library(kableExtra)
+library(gridExtra)
 ```
 
 ```{r}
@@ -59,94 +60,73 @@ bip_full |>
 
 ```{r}
 #| label: fig-fielder-positioning
-#| fig-cap: "Average fielder positioning for infielders (1B, 2B, SS, 3B) based on batted balls successfully fielded from 2023-2025 seasons. This considers all batted balls, not just ground balls."
+#| fig-cap: "Average fielder positioning for infielders (1B, 2B, SS, 3B) based on batted balls successfully fielded from 2023-2025 seasons. Black dots represent batted balls, red dots represent average fielder positions calculated as the center of all batted balls."
 
 safe_positioning <- read_rds("statcast_data/player_positioning/safe_positioning.rds")
+
+bases <- data.frame(
+  x = c(-63.64, 0, 63.64, 0, -63.64),
+  y = c(63.64, 127.28, 63.64, 0, 63.64)
+)
 
 # plot 3B
 p_3b <- ggplot() +
   geom_point(data = bip_full |> filter(play_made_by == "3B"), 
              aes(x = location_x, y = location_y), alpha = 0.01) +
   geom_point(data = safe_positioning |> filter(play_made_by == "3B"), 
-             aes(x = pos_x, y = pos_y), color = "red", size = 3) +
-  annotate("rect", xmin = -63.64 - 5, xmax = -63.64 + 5, 
-           ymin = 63.64 - 5, ymax = 63.64 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
-  annotate("rect", xmin = -5, xmax = 5, 
-           ymin = 127.28 - 5, ymax = 127.28 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
-  annotate("rect", xmin = 63.64 - 5, xmax = 63.64 + 5, 
-           ymin = 63.64 - 5, ymax = 63.64 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
+             aes(x = pos_x, y = pos_y), color = "red", size = 2) +
+  geom_path(data = bases, aes(x = x, y = y), color = "black", linewidth = 1) +
+  geom_point(data = bases[1:4,], aes(x = x, y = y), 
+             color = "black", size = 2, shape = 15, inherit.aes = FALSE) +
   theme_classic() +
   theme(axis.title.x = element_blank(),
         axis.title.y = element_blank()) +
   labs(title = "3B") +
-  coord_fixed(ratio = 1, xlim = c(-100, 100), ylim = c(0, 175))
+  coord_fixed(ratio = 1, xlim = c(-100, 100), ylim = c(0, 200))
 
 # plot SS
 p_ss <- ggplot() +
   geom_point(data = bip_full |> filter(play_made_by == "SS"), 
              aes(x = location_x, y = location_y), alpha = 0.01) +
   geom_point(data = safe_positioning |> filter(play_made_by == "SS"), 
-             aes(x = pos_x, y = pos_y), color = "red", size = 3) +
-  annotate("rect", xmin = -63.64 - 5, xmax = -63.64 + 5, 
-           ymin = 63.64 - 5, ymax = 63.64 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
-  annotate("rect", xmin = -5, xmax = 5, 
-           ymin = 127.28 - 5, ymax = 127.28 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
-  annotate("rect", xmin = 63.64 - 5, xmax = 63.64 + 5, 
-           ymin = 63.64 - 5, ymax = 63.64 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
+             aes(x = pos_x, y = pos_y), color = "red", size = 2) +
+  geom_path(data = bases, aes(x = x, y = y), color = "black", linewidth = 1) +
+  geom_point(data = bases[1:4,], aes(x = x, y = y), 
+             color = "black", size = 2, shape = 15, inherit.aes = FALSE) +
   theme_classic() +
   theme(axis.title.x = element_blank(),
         axis.title.y = element_blank()) +
   labs(title = "SS") +
-  coord_fixed(ratio = 1, xlim = c(-100, 100), ylim = c(0, 175))
+  coord_fixed(ratio = 1, xlim = c(-100, 100), ylim = c(0, 200))
 
 p_2b <- ggplot() +
   geom_point(data = bip_full |> filter(play_made_by == "2B"), 
              aes(x = location_x, y = location_y), alpha = 0.01) +
   geom_point(data = safe_positioning |> filter(play_made_by == "2B"), 
-             aes(x = pos_x, y = pos_y), color = "red", size = 3) +
-  annotate("rect", xmin = -63.64 - 5, xmax = -63.64 + 5, 
-           ymin = 63.64 - 5, ymax = 63.64 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
-  annotate("rect", xmin = -5, xmax = 5, 
-           ymin = 127.28 - 5, ymax = 127.28 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
-  annotate("rect", xmin = 63.64 - 5, xmax = 63.64 + 5, 
-           ymin = 63.64 - 5, ymax = 63.64 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
+             aes(x = pos_x, y = pos_y), color = "red", size = 2) +
+  geom_path(data = bases, aes(x = x, y = y), color = "black", linewidth = 1) +
+  geom_point(data = bases[1:4,], aes(x = x, y = y), 
+             color = "black", size = 2, shape = 15, inherit.aes = FALSE) +
   theme_classic() +
   theme(axis.title.x = element_blank(),
         axis.title.y = element_blank()) +
   labs(title = "2B") +
-  coord_fixed(ratio = 1, xlim = c(-100, 100), ylim = c(0, 175))
+  coord_fixed(ratio = 1, xlim = c(-100, 100), ylim = c(0, 200))
 
 p_1b <- ggplot() +
   geom_point(data = bip_full |> filter(play_made_by == "1B"), 
              aes(x = location_x, y = location_y), alpha = 0.01) +
   geom_point(data = safe_positioning |> filter(play_made_by == "1B"), 
-             aes(x = pos_x, y = pos_y), color = "red", size = 3) +
-  annotate("rect", xmin = -63.64 - 5, xmax = -63.64 + 5, 
-           ymin = 63.64 - 5, ymax = 63.64 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
-  annotate("rect", xmin = -5, xmax = 5, 
-           ymin = 127.28 - 5, ymax = 127.28 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
-  annotate("rect", xmin = 63.64 - 5, xmax = 63.64 + 5, 
-           ymin = 63.64 - 5, ymax = 63.64 + 5, 
-           alpha = 0.9, fill = "blue", color = "black", linewidth = 0.5) +
+             aes(x = pos_x, y = pos_y), color = "red", size = 2) +
+  geom_path(data = bases, aes(x = x, y = y), color = "black", linewidth = 1) +
+  geom_point(data = bases[1:4,], aes(x = x, y = y), 
+             color = "black", size = 2, shape = 15, inherit.aes = FALSE) +
   theme_classic() +
   theme(axis.title.x = element_blank(),
         axis.title.y = element_blank()) +
   labs(title = "1B") +
-  coord_fixed(ratio = 1, xlim = c(-100, 100), ylim = c(0, 175))
+  coord_fixed(ratio = 1, xlim = c(-100, 100), ylim = c(0, 200))
 
-# grid arrange
-library(gridExtra)
 grid.arrange(p_3b, p_ss, p_2b, p_1b, ncol = 4)
   
 ```
